# agx

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  TODO.md  deny.toml  justfile
.github/workflows/: main.yml  pr.yml
local/: Dockerfile  docker-compose.lgtm.yml  docker-compose.yml
src/: app.rs  config.rs  env.rs  main.rs  telemetry.rs
src/assets/: system-prompt.txt
src/debug/: server.rs
src/debug/client/: .gitignore  README.md  gleam.toml  index.html  justfile  manifest.toml
src/debug/client/src/: agx_debug.gleam
src/debug/client/src/agx_debug/: effects.gleam  model.gleam  types.gleam  update.gleam  view.gleam
src/debug/client/src/agx_debug/ffi/: json.mjs  scroll.mjs  sse.mjs
src/domain/: cmd.rs  config.rs  debug.rs  message.rs  mod.rs  provider.rs
src/helpers/: context.rs  diff.rs  fs.rs  mod.rs
src/providers/: copilot.rs
src/session/: hitl.rs  mod.rs
src/session/assets/: commands.txt  logo.txt  system-prompt.txt
src/tools/: cancel.rs  create_file.rs  edit_file.rs  hitl.rs  mod.rs  read_dir.rs  read_file.rs  repr.rs  run_cmd.rs  tool_call.rs
src/tools/helpers/: fs.rs
src/tools/testdata/: sample.txt
