[package]
name = "agx"
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/dhth/agx"
description = "a simple agentic executor"
homepage = "https://github.com/dhth/agx"
keywords = [
    "cli",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "deny.toml",
    "justfile",
]

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
console = "0.16.2"
etcetera = "0.11.0"
futures = "0.3.31"
ignore = "0.4.25"
reqwest = { version = "0.12.26", default-features = false, features = ["rustls-tls"] }
rig-core = { version = "0.27.0", default-features = false, features = ["reqwest-rustls"] }
rustyline = { version = "17.0.2", features = ["with-file-history"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
similar = { version = "2.7.0", features = ["inline"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread", "signal", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = { version = "0.1.43", features = ["attributes"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[dev-dependencies]
insta = { version = "1.44.3", features = ["yaml"] }
