[package]
name = "agx"
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/dhth/agx"
description = "a simple agentic executor"
homepage = "https://github.com/dhth/agx"
keywords = [
    "cli",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "src/debug/client",
    "!src/debug/client/index.html",
    "deny.toml",
    "justfile",
]

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.56", features = ["derive"] }
colored = "3.0.0"
console = "0.16.2"
etcetera = "0.11.0"
futures = "0.3.31"
ignore = "0.4.25"
opentelemetry = "0.30.0"
opentelemetry_sdk = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }
rig-core = { version = "0.28.0", default-features = false, features = ["reqwest-rustls"] }
rustyline = { version = "17.0.2", features = ["with-file-history"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shlex = "1.3.0"
similar = { version = "2.7.0", features = ["inline"] }
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread", "signal", "sync"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = { version = "0.1.44", features = ["attributes"] }
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[dev-dependencies]
insta = { version = "1.45.1", features = ["yaml"] }
